Overflow fix, Improved look & feel, Swedish answers (#4)
* more styling
* added DigiByte D
* more styling
* fonts - links
* added bottom title
* text overflow fix
* improved look & feel
* improved look & feel
* fonts
* cleanup
* improved look & feel
* jquery cdn revert
* added Swedish answers
* cleanup
* scrollbar height fix

--- a/style.css
+++ b/style.css
@@ -1,12 +1,27 @@
 body {
-    height: 100vh;
-    margin: 0;
+    height:         100vh;
+    margin:         0;
 
-    background: #1e5799; /* Old browsers */
-    background: -moz-linear-gradient(45deg,  #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(45deg,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(45deg,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background:     #1e5799; /* Old browsers */
+    background:     -moz-linear-gradient(45deg,  #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%); /* FF3.6-15 */
+    background:     -webkit-linear-gradient(45deg,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
+    background:     linear-gradient(45deg,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter:         progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+
+#overlay {
+    height:         inherit;
+    width:          100%;
+    margin:         0;
+    position:       fixed;
+    top:            0;
+    left:           0;
+    z-index:        0;
+    background:     -moz-linear-gradient(-45deg, #7db9e8 0%, #207cca 50%, #2989d8 52%, #1e5799 100%);
+    background:     -webkit-linear-gradient(-45deg, #7db9e8 0%, #207cca 50%, #2989d8 52%, #1e5799 100%);
+    background:     linear-gradient(-45deg, #7db9e8 0%, #207cca 50%, #2989d8 52%, #1e5799 100%);
+    opacity:        50%;
+
 }
 
 #window {
@@ -17,7 +32,6 @@ body {
     left: 				50%;
     transform: 			translate(-50%, -50%);
 	padding:			50px;
-	
 
     background-color: 	white;
     border-radius:		2px;
@@ -25,114 +39,163 @@ body {
     font-size:			20px;
     font-weight:		bold;
 	
-	border-radius: 50px;
+    border-radius:      50px;
+    display:            none;
+
+    overflow-y:         auto;
+    overflow-x:         hidden;
+    max-height:         70%;
+    z-index:            2;
+
+    scrollbar-width:    thin;
+    scrollbar-color:  #2989d8 white;
+    scrollbar-color:    linear-gradient(90deg,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
+    scrollbar-color:    -moz-linear-gradient(90deg,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
+}
+
+#window::-webkit-scrollbar {
+    width:              10px;
+  }
+  
+#window::-webkit-scrollbar-track {
+    background:         transparent;
+  }
+  
+#window::-webkit-scrollbar-thumb {
+    background-color:  #2989d8;
+    background-image:   -webkit-linear-gradient(90deg,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
+    border-radius:      20px;
+    border:             2px solid white;
+  }
+
+#window::-webkit-scrollbar-track-piece:end {
+    margin-bottom: 50px;
+}
+#window::-webkit-scrollbar-track-piece:start {
+    margin-top: 50px;
 }
 
 #question{
-    font-family:'Courier New', Courier, monospace;
-    padding: 0 0 1rem 0;
+    font-family:        'Courier New', Courier, monospace;
+    padding:            0 0 1rem 0;
 }
 
 #answer {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:        sans-serif;
     font-size:			15px;
-	padding-bottom: 5px;
+	padding-bottom:     5px;
 }
 
 #answer a{
-    color: #207cca;
-    text-decoration: none;
-    font-weight:700;
+    color:            #207cca;
+    text-decoration:    none;
+    font-weight:        700;
 }
 #answer a:visited{
-    color:#207cca;
+    color:      #207cca;
 }
 
+#answer li::marker{
+    font-size:          1.1rem;
+    font-family:        Roboto-thin, sans-serif;
+}
+
+#answer li{
+    border-bottom:      1px solid;
+    border-color:     rgba(0,0,0,.1);
+    border-radius:      5px;
+}
 .option {
-	display: block;
-    border: 1px solid #1e5799;
+	display:            block;
+    border:             1px solid #1e5799;
     background-color: #2989d8;
-    font-size: 20px;
-    border-radius: 20px;
-    width: 100%;
-    height: 40px;
-    overflow: auto;
-    margin: 5px;
+    font-size:          20px;
+    border-radius:      20px;
+    width:              100%;
+    height:             40px;
+    overflow:           auto;
+    margin:             5px;
 }
 .option:hover{
-    cursor: pointer;
-    transform: scale(.98);
+    cursor:     pointer;
+    transform:  scale(.98);
 }
 .option:focus{
     outline: none;
 }
 .code {
-    font-family: "Courier New";
+    font-family:        "Courier New";
     background-color: #808080;
-    border-style: solid;
-    border-width: thin;
-    border-color: black;
-    padding: 0px 5px;
+    border-style:       solid;
+    border-width:       thin;
+    border-color:     black;
+    padding:            0px 5px;
 }
 .shadow {
     display: none;
 }
 
 #shadow {
-    position:     fixed;
-    padding:      0;
-    margin:       0;
+    position:       fixed;
+    padding:        0;
+    margin:         0;
 
-    top:        0;
-    left:       0;
+    top:            0;
+    left:           0;
 
-    width:        100%;
-    height:       100%;
-    background:     rgba(0,0,0,0.5);
-    z-index:      999999;
+    width:          100%;
+    height:         100%;
+    background:    rgba(0,0,0,0.5);
+    z-index:        999999;
 }
 #warn {
     text-align:     center;
-    margin:       0;
+    margin:         0;
     position:       fixed;
-    top:        50%;
-    left:         50%;
+    top:            50%;
+    left:           50%;
     transform:      translate(-50%, -50%);
-    border-radius: 20px;
-    padding: 30px;
-    color:  #ffffff;
-    background-color:   #ff0000;
-    box-shadow:     0 0 15px;
-    font-size:      14px;
-    font-weight:    bold;
-    z-index:      1000000;
+    border-radius:  20px;
+    padding:        30px;
+    color:        #ffffff;
+    background-color: #ff0000;
+    box-shadow:         0 0 15px;
+    font-size:          14px;
+    font-weight:        bold;
+    z-index:            1000000;
 }
 #warnConfirm {
-    width: 100%;
+    width:      100%;
     margin-top: 5px;
 }
 
 
 #dgb-d{
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
+    position:   fixed;
+    bottom:     10px;
+    left:       10px;
 }
 h2#troubleshooting{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color:white;
-    position:fixed;
-    bottom:5px;
-    left:50%;
-    transform:translate(-50%);
+    font-family:    Roboto-thin, sans-serif;
+    color:        white;
+    position:       fixed;
+    bottom:         5px;
+    left:           50%;
+    transform:      translate(-50%);
+    text-shadow:    3px 5px 5px black;
+}
+
+@font-face {
+    font-family:    Roboto-thin;
+    src:            url("/fonts/Roboto-ThinItalic.ttf");
 }
 
 @media only screen and (max-width: 600px) {
     #window {
-        width: calc(100% - 50px);
-        padding: 20px;
+        width:      calc(100% - 50px);
+        padding:    20px;
     }
     .option {
-        font-size: 15px;
+        font-size:  15px;
     }
 }
